--- a/about-us.html
+++ b/about-us.html
@@ -111,6 +111,8 @@
                                 <li class="dropdown"><a href="speakers.html">Speakers</a></li>
 
                                 <li class="dropdown"><a href="schedule.html">Schedule</a></li>
+								
+								<li class="dropdown"><a href="sponsors.html">Sponsors</a></li>
 
                                 <li class="dropdown"><a href="#">Other Events</a>
 
