--- a/schedule.html
+++ b/schedule.html
@@ -85,6 +85,8 @@
                                 <li class="dropdown"><a href="speakers.html">Speakers</a></li>
 
                                 <li class="current dropdown"><a href="schedule.html">Schedule</a></li>
+								
+								<li class="dropdown"><a href="sponsors.html">Sponsors</a></li>
 
                                 <li class="dropdown"><a href="#">Other Events</a>
 
