--- a/sponsors.html
+++ b/sponsors.html
@@ -82,11 +82,11 @@
 
                                 <li class="dropdown"><a href="about-us.html">About</a></li>
 
-                                <li class="current dropdown"><a href="speakers.html">Speakers</a></li>
+                                <li class="dropdown"><a href="speakers.html">Speakers</a></li>
 
                                 <li class="dropdown"><a href="schedule.html">Schedule</a></li>
 								
-								<li class="dropdown"><a href="sponsors.html">Sponsors</a></li>
+								<li class="current dropdown"><a href="sponsors.html">Sponsors</a></li>
 
                                 <li class="dropdown"><a href="#">Other Events</a>
 
@@ -171,197 +171,190 @@
     <!--Page Title-->
     <section class="page-title" style="background-image:url(images/main-slider/scrum-pages-2.png);">
         <div class="auto-container">
-            <h1>Speakers</h1>
+            <h1>Sponsors</h1>
             <ul class="bread-crumb clearfix">
                 <li><a href="index.html">Home</a></li>
-                <li>Speakers</li>
+                <li>Sponsors</li>
             </ul>
         </div>
     </section>
     <!--End Page Title-->
 
  
-    <!-- Speakers Section -->
-    <section class="speakers-section-three">
+ 
+    <!--Clients Section-->
+
+   <section class="schedule-section">
+        <div class="anim-icons">
+            <span class="icon icon-circle-4 wow zoomIn"></span>
+            <span class="icon icon-circle-3 wow zoomIn"></span>
+        </div>
+
         <div class="auto-container">
             <div class="sec-title text-center">
-                <span class="title">Speakers</span>
-                <h2>Todays Performers</h2>
+                <span class="title">Our</span>
+                <h2>Official Sponsors</h2>
             </div>
 
-            <div class="row">
-                
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Dale Marke</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">                            
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                            </ul>
-                        </div>
+
+
+            <div class="sponsors-outer">
+
+                <h3>Platinum Sponsors</h3>
+
+                <div class="row">
+
+                    <!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="#"><img src="images/clients/1.png" alt=""></a></figure>
+
                     </div>
+
+
+
+                    <!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="#"><img src="images/clients/2.png" alt=""></a></figure>
+
+                    </div>
+
+
+
+                    <!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="#"><img src="images/clients/3.png" alt=""></a></figure>
+
+                    </div>
+
+
+
+                    <!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="#"><img src="images/clients/4.png" alt=""></a></figure>
+
+                    </div>
+
                 </div>
 
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Natisha Decoux</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">                            
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Adolfo Plahs</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Mitchell Hegg</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Kenyetta Lesley</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Shelly Verghese</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Kenyetta Lesley</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Shelly Verghese</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
             </div>
+
+
+
+            <div class="sponsors-outer">
+
+                <h3>Gold Sponsors</h3>
+
+
+
+                <div class="row">
+
+                    <!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="#"><img src="images/clients/5.png" alt=""></a></figure>
+
+                    </div>
+
+
+
+                    <!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="#"><img src="images/clients/6.png" alt=""></a></figure>
+
+                    </div>
+
+
+
+                    <!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="#"><img src="images/clients/7.png" alt=""></a></figure>
+
+                    </div>
+
+
+
+                    <!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="#"><img src="images/clients/8.png" alt=""></a></figure>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
+
+            <div class="sponsors-outer">
+
+                <h3>Silver Sponsors</h3>
+
+
+
+                <div class="row">
+
+                    <!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="#"><img src="images/clients/9.png" alt=""></a></figure>
+
+                    </div>
+
+
+
+                    <!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="#"><img src="images/clients/10.png" alt=""></a></figure>
+
+                    </div>
+
+
+
+                    <!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="#"><img src="images/clients/11.png" alt=""></a></figure>
+
+                    </div>
+
+
+
+                    <!-- Client Block -->
+
+                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
+
+                        <figure class="image-box"><a href="#"><img src="images/clients/12.png" alt=""></a></figure>
+
+                    </div>
+
+                </div>
+
+            </div>
+
         </div>
+
     </section>
-    <!-- End Speakers Section -->
+
+    <!--End Clients Section-->
 
    <!-- Subscribe Section -->
 
