--- a/testing.html
+++ b/testing.html
@@ -720,11 +720,11 @@
 
                                             <h5 class="name">Vikrant Singh</h5>
 
-                                            <span class="designation">Founder & CEO</span>
+                                            <span class="designation">Event Manager</span>
 
                                         </div>
 
-                                        <h4><a href="event-detail.html">Modern Marketing Summit Sydney 2018</a></h4>
+                                        <h4><a href="event-detail.html">Scrum Day Bengaluru 2021 - Hosted by Xebia</a></h4>
 
                                         <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmtempor incididunt labore et</div>
 
@@ -758,11 +758,11 @@
 
                                             <h5 class="name">Vikrant Singh</h5>
 
-                                            <span class="designation">Founder & CEO</span>
+                                            <span class="designation">Event Manager</span>
 
                                         </div>
 
-                                        <h4><a href="event-detail.html">Modern Marketing Summit Sydney 2018</a></h4>
+                                        <h4><a href="event-detail.html">Scrum Day Bengaluru 2021 - Hosted by Xebia</a></h4>
 
                                         <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmtempor incididunt labore et</div>
 
@@ -796,11 +796,11 @@
 
                                             <h5 class="name">Vikrant Singh</h5>
 
-                                            <span class="designation">Founder & CEO</span>
+                                            <span class="designation">Event Manager</span>
 
                                         </div>
 
-                                        <h4><a href="event-detail.html">Modern Marketing Summit Sydney 2018</a></h4>
+                                        <h4><a href="event-detail.html">Scrum Day Bengaluru 2021 - Hosted by Xebia</a></h4>
 
                                         <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmtempor incididunt labore et</div>
 
@@ -834,11 +834,11 @@
 
                                             <h5 class="name">Vikrant Singh</h5>
 
-                                            <span class="designation">Founder & CEO</span>
+                                            <span class="designation">Event Manager</span>
 
                                         </div>
 
-                                        <h4><a href="event-detail.html">Modern Marketing Summit Sydney 2018</a></h4>
+                                        <h4><a href="event-detail.html">Scrum Day Bengaluru 2021 - Hosted by Xebia</a></h4>
 
                                         <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmtempor incididunt labore et</div>
 
@@ -882,11 +882,11 @@
 
                                             <h5 class="name">Vikrant Singh</h5>
 
-                                            <span class="designation">Founder & CEO</span>
+                                            <span class="designation">Event Manager</span>
 
                                         </div>
 
-                                        <h4><a href="event-detail.html">Modern Marketing Summit Sydney 2018</a></h4>
+                                        <h4><a href="event-detail.html">Scrum Day Bengaluru 2021 - Hosted by Xebia</a></h4>
 
                                         <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmtempor incididunt labore et</div>
 
@@ -920,11 +920,11 @@
 
                                             <h5 class="name">Vikrant Singh</h5>
 
-                                            <span class="designation">Founder & CEO</span>
+                                            <span class="designation">Event Manager</span>
 
                                         </div>
 
-                                        <h4><a href="event-detail.html">Modern Marketing Summit Sydney 2018</a></h4>
+                                        <h4><a href="event-detail.html">Scrum Day Bengaluru 2021 - Hosted by Xebia</a></h4>
 
                                         <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmtempor incididunt labore et</div>
 
@@ -956,13 +956,13 @@
 
                                             <figure class="thumb"><img src="images/resource/thumb-1.jpg" alt=""></figure>
 
-                                            <h5 class="name">Ashli Scroggy</h5>
+                                            <h5 class="name">Vikrant Singh</h5>
 
-                                            <span class="designation">Founder & CEO</span>
+                                            <span class="designation">Event Manager</span>
 
                                         </div>
 
-                                        <h4><a href="event-detail.html">Modern Marketing Summit Sydney 2018</a></h4>
+                                        <h4><a href="event-detail.html">Scrum Day Bengaluru 2021 - Hosted by Xebia</a></h4>
 
                                         <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmtempor incididunt labore et</div>
 
@@ -996,11 +996,11 @@
 
                                             <h5 class="name">Vikrant Singh</h5>
 
-                                            <span class="designation">Founder & CEO</span>
+                                            <span class="designation">Event Manager</span>
 
                                         </div>
 
-                                        <h4><a href="event-detail.html">Modern Marketing Summit Sydney 2018</a></h4>
+                                        <h4><a href="event-detail.html">Scrum Day Bengaluru 2021 - Hosted by Xebia</a></h4>
 
                                         <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmtempor incididunt labore et</div>
 
@@ -1487,7 +1487,7 @@
 
                             <span class="icon fa fa-envelope"></span>
 
-                            <h2>Subscribe our <br>newslatter</h2>
+                            <h2>Subscribe our <br>newsletter</h2>
 
                         </div>
 
