--- a/schedule.html
+++ b/schedule.html
@@ -515,12 +515,11 @@
 
                                         <li><a href="https://rsgpune.org/">Regional Scrum Gathering Pune</a></li>
 
-                                        <li><a href="#">Terms & Conditions</a></li>
+                                        <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
-                                        <li><a href="#">Privacy Policy</a></li>
+                                        <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf">Privacy Policy</a></li>
 
                                         <li><a href="contact.html">Contact Us</a></li>
-
                                     </ul>
 
                                 </div>
