--- a/contact.html
+++ b/contact.html
@@ -196,14 +196,20 @@
                         <ul class="contact-info">
                             <li>
                                 <span class="icon fa fa-map-marker-alt"></span> 
-                                <p><strong>Xebia Global Services</strong></p>
+                                <p><strong>Xebia Head Office</strong></p>
                                 <p>Capital Cyberscape, Gurugram, India</p>
+                            </li>
+							
+							 <li>
+                                <span class="icon fa fa-map-marker-alt"></span> 
+                                <p><strong>6th Floor, The HIVE Workspaces</strong></p>
+                                <p>Bengaluru, Karnataka 560048</p>
                             </li>
 
                             <li>
                                 <span class="icon fa fa-phone-volume"></span> 
                                 <p><strong>Call Us</strong></p>
-                                <p>+91 124 4700 200 & +91 9873608216</p>
+                                <p>+91 124 4700 200 <b> & </b> +91 80672 34313</p>
                             </li>
 
                             <li>
