--- a/testing.html
+++ b/testing.html
@@ -194,10 +194,10 @@
             </div>
             <!-- Countdown -->
             <div class="countdown clearfix">
-                <div class="time-counter"><div class="time-countdown clearfix" data-countdown="2021/06/19 09:30:00"></div></div>
+                <div class="time-counter"><div class="time-countdown clearfix" data-countdown="2021/06/19 13:00:00"></div></div>
             </div>
             <div class="btn-box">
-                <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Buy Tickets</span></a>
             </div>
         </div> 
     </section>
@@ -366,8 +366,8 @@
 
         <div class="auto-container">
             <div class="sec-title text-center">
-                <span class="title">Speakers</span>
-                <h2>Todays Performers</h2>
+                <span class="title">Our</span>
+                <h2>Speakers</h2>
             </div>
 
             <div class="row">
@@ -649,7 +649,7 @@
 
                 <span class="title">Scrum Day Bangalore 2021</span>
 
-                <h2>Schedule Plan</h2>
+                <h2>Conference Schedule</h2>
 
             </div>
 
@@ -1202,31 +1202,6 @@
 
     <!--End Pricing Section -->
 
-
-    <!-- Video Section -->
-
-    <section class="video-section" style="background-image: url(images/background/1.jpg);">
-
-        <div class="auto-container">
-
-            <div class="content-box">
-
-                <div class="text">CREATING DIGITAL LEADERS</div>
-
-                <h2>Xebia delivers high-quality services<br> to cover all aspects of digital transformation.</h2>
-
-                <a href="https://youtu.be/5TVVIEwKn5c" class="play-now" data-fancybox="gallery" data-caption=""><i class="icon flaticon-play-button-3" aria-hidden="true"></i><span class="ripple"></span></a>
-
-            </div>
-
-        </div>
-
-    </section>
-
-    <!--End Video Section -->
-
-
-
     <!-- Why Choose Us -->
 
     <section class="why-choose-us">
@@ -1329,35 +1304,7 @@
 
                     </div>
 
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/2.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/3.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/4.png" alt=""></a></figure>
-
-                    </div>
+                    <!-- Client End -->
 
                 </div>
 
@@ -1377,97 +1324,21 @@
 
                     <div class="client-block col-lg-3 col-md-6 col-sm-12">
 
-                        <figure class="image-box"><a href="#"><img src="images/clients/5.png" alt=""></a></figure>
+                        <figure class="image-box"><a href="#"><img src="images/clients/2.png" alt=""></a></figure>
 
                     </div>
 
+                    <!-- Client Block End-->
 
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/6.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/7.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/8.png" alt=""></a></figure>
-
-                    </div>
-
-                </div>
+              </div>
 
             </div>
 
+         </div>
 
+      </div>
 
-            <div class="sponsors-outer">
-
-                <h3>Silver Sponsors</h3>
-
-
-
-                <div class="row">
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/9.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/10.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/11.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/12.png" alt=""></a></figure>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
+    </div>
 
     </section>
 
