--- a/sponsors.html
+++ b/sponsors.html
@@ -184,17 +184,25 @@
  
     <!--Clients Section-->
 
-   <section class="schedule-section">
+   <section class="clients-section">
+
         <div class="anim-icons">
-            <span class="icon icon-circle-4 wow zoomIn"></span>
-            <span class="icon icon-circle-3 wow zoomIn"></span>
+
+            <span class="icon icon-dots-3 wow zoomIn"></span>
+
+            <span class="icon icon-circle-blue wow zoomIn"></span>
+
         </div>
 
         <div class="auto-container">
-            <div class="sec-title text-center">
+
+            <div class="sec-title">
+
                 <span class="title">Our</span>
-                <h2>Official Sponsors</h2>
-            </div>
+
+                <h2>Offcial Sponsors</h2>
+
+            </div> 
 
 
 
@@ -204,7 +212,7 @@
 
                 <div class="row">
 
-                    <!-- Client Block -->
+                  <!-- Client Block -->
 
                     <div class="client-block col-lg-3 col-md-6 col-sm-12">
 
@@ -212,35 +220,7 @@
 
                     </div>
 
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/2.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/3.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/4.png" alt=""></a></figure>
-
-                    </div>
+  
 
                 </div>
 
@@ -256,101 +236,23 @@
 
                 <div class="row">
 
-                    <!-- Client Block -->
+                   <!-- Client Block -->
 
                     <div class="client-block col-lg-3 col-md-6 col-sm-12">
 
-                        <figure class="image-box"><a href="#"><img src="images/clients/5.png" alt=""></a></figure>
+                        <figure class="image-box"><a href="#"><img src="images/clients/2.png" alt=""></a></figure>
 
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/6.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/7.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/8.png" alt=""></a></figure>
-
-                    </div>
-
-                </div>
+              </div>
 
             </div>
 
+           </div>
 
+         </div>
 
-            <div class="sponsors-outer">
+      </div>
 
-                <h3>Silver Sponsors</h3>
-
-
-
-                <div class="row">
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/9.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/10.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/11.png" alt=""></a></figure>
-
-                    </div>
-
-
-
-                    <!-- Client Block -->
-
-                    <div class="client-block col-lg-3 col-md-6 col-sm-12">
-
-                        <figure class="image-box"><a href="#"><img src="images/clients/12.png" alt=""></a></figure>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
+    </div>
 
     </section>
 
