--- a/testing.html
+++ b/testing.html
@@ -1238,7 +1238,7 @@
 
                         <div class="btn-box">
 
-                            <a href="buy-ticket.html" class="theme-btn btn-style-two"><span class="btn-title">Get Tickets</span></a>
+                            <a href="buy-ticket.html" class="theme-btn btn-style-two"><span class="btn-title">Buy Tickets</span></a>
 
                         </div>
 
