--- a/about-us.html
+++ b/about-us.html
@@ -532,7 +532,7 @@
 
                             <span class="icon fa fa-envelope"></span>
 
-                            <h2>Subscribe our <br>newslatter</h2>
+                            <h2>Subscribe our <br>Newsletter</h2>
 
                         </div>
 
