--- a/gallery.html
+++ b/gallery.html
@@ -295,7 +295,7 @@
 
                             <span class="icon fa fa-envelope"></span>
 
-                            <h2>Subscribe our <br>newslatter</h2>
+                            <h2>Subscribe our <br>newsletter</h2>
 
                         </div>
 
