--- a/schedule.html
+++ b/schedule.html
@@ -403,7 +403,7 @@
 
                             <span class="icon fa fa-envelope"></span>
 
-                            <h2>Subscribe our <br>newsletter</h2>
+                            <h2>Subscribe our <br>Newsletter</h2>
 
                         </div>
 
@@ -417,7 +417,7 @@
 
                         <div class="newsletter-form">
 
-                            <form method="post" action="https://expert-themes.com/html/eventrox/blog.html">
+                            <form method="post" action="https://scrumdaybangalore.org/">
 
                                 <div class="form-group">
 
@@ -722,7 +722,7 @@
 
     	<div class="search-form">
 
-        	<form method="post" action="https://expert-themes.com/html/eventrox/index.html">
+        	<form method="post" action="https://www.google.com/">
 
             	<div class="form-group">
 
